#pragma once

struct  HeroConfig {
    int health;
    int damage;
};
