#pragma once

#include "HeroConfig.h"

struct  HeroesConfig {
    HeroConfig mage_config;
    HeroConfig warrior_config;
    HeroConfig god_config;
};

