#pragma once

enum HeroType {
    HeroType_God,
    HeroType_Mage,
    HeroType_Warrior
};
